getLast corrected